--- a/src/app/web-app/web-app.component.html
+++ b/src/app/web-app/web-app.component.html
@@ -12,7 +12,7 @@
           <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="'/web-app/share'">Shares</a>
         </li>
       </ul>
-      <ul class="navbar-nav toggle-navbar ml-auto">
+      <ul class="navbar-nav toggle-navbar">
         <li class="nav-item align-self-center">
           <a class="nav-link" href="javascript:void(0)"><i class="fas fa-search align-bottom icon-size"></i></a>
         </li>
